# dcrx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: default.yaml
dcrx/: __init__.py  directive.py  image.py
dcrx/cli/: compile.py  new.py  root.py  validate.py
dcrx/cli/templates/: basic.py
dcrx/layers/: __init__.py  add.py  arg.py  cmd.py  copy.py  entrypoint.py  env.py  expose.py  healthcheck.py  label.py  maintainer.py  onbuild.py  run.py  shell.py  stage.py  stopsignal.py  user.py  volume.py  workdir.py
dcrx/layers/mount_types/: __init__.py  bind_mount.py  cache_mount.py  secret_mount.py  ssh_mount.py  tmpfs_mount.py
dcrx/memory_file/: __init__.py  memory_file.py
dcrx/queries/: __init__.py  layer_query.py
examples/: Dockerfile  Dockerfile.test-images  build_hello_world.py  example.py  mem.py
