[project]
name = "dcrx"
version = "0.4.7"
description = "A library for typesafe, programmatic generation of Docker images via SQL-builder like API."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ada Lundhe", email = "adalundhe@lundhe.audio"}
]
classifiers = [
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = [
    'pypi', 
    'cicd', 
    'python',
    'setup',
    'docker',
    'infra',
    'devops'
]
license = { file = "LICENSE" }
dependencies = [
    'pydantic'
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
